# hackathon

./: .env.example  .gitignore  AGENTS.md  main.py  opencode.json  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/superpowers/plans/: 2026-07-11-remove-hardcoded-companies-and-portfolio-onboarding.md  2026-07-11-yfiles-correlation-graph.md
docs/superpowers/specs/: 2026-07-11-global-refresh-remove-onboarding-design.md  2026-07-11-yfiles-correlation-graph-design.md
src/ews_ingest/: __init__.py  __main__.py  cli.py  config.py
src/ews_ingest/config/: entities.yaml  indicators.yaml  sources.yaml
src/ews_ingest/core/: __init__.py  context.py  entities.py  hashing.py  http.py  landing.py  logging.py  models.py  protocol.py  records.py  registry.py  scrape.py
src/ews_ingest/dashboard/: __init__.py  app.py  bindings.py  companies.py  company_store.py  compute.py  db.py  demo.py  env.py  graph.py  icons.py  landing.py  onboarding.py  services.py  stats.py  ticker_suggest.py  ui.py  yahoo_sector.py
src/ews_ingest/dashboard/signals/: __init__.py  country.py  credit_spreads.py  demand_trend.py  earnings_surprise.py  geopolitical.py  industry.py  insider_activity.py  ism.py  macro_health.py  news_sentiment.py  price_momentum.py  profitability.py  protocol.py  regulation.py  supply_chain.py  volatility.py  warn_layoffs.py
src/ews_ingest/providers/: __init__.py  bls.py  bts.py  eia.py  epa.py  fmcsa.py  fred.py  gdelt.py  gleif.py  hackernews.py  sec.py
src/ews_ingest/sources/: __init__.py
src/ews_ingest/sources/commodity/: __init__.py  eia.py  imf_pcps.py  usda_nass.py  worldbank_pinksheet.py
src/ews_ingest/sources/company_financials/: __init__.py  company_facts.py  concept_frames.py  dera_bulk.py  fulltext_search.py  submissions.py
src/ews_ingest/sources/credit_market/: __init__.py  alpha_vantage.py  finra_trace.py  fred_credit.py  rating_agencies.py  sec_form4_13f.py  sec_ocr.py  stooq.py  treasury_fiscaldata.py  twelve_data.py  yahoo.py
src/ews_ingest/sources/default_truth/: __init__.py  courtlistener.py  pacer.py  sec_8k_bankruptcy.py  state_sos_ucc.py
src/ews_ingest/sources/identity/: __init__.py  gleif.py  opencorporates.py  sec_identity.py  sec_proxy_forms.py  wikidata.py
src/ews_ingest/sources/labor/: __init__.py  bls.py  state_warn.py
src/ews_ingest/sources/macro/: __init__.py  bea.py  census.py  fed_releases.py  fred_macro.py  ism_pmi.py  regional_fed.py
src/ews_ingest/sources/news/: __init__.py  bluesky.py  common_crawl_news.py  company_ir.py  eight_k.py  gdelt.py  google_news_rss.py  google_trends.py  hackernews.py  mastodon.py  presswire.py  reddit.py  stocktwits.py
src/ews_ingest/sources/petrochem/: __init__.py  csb_reports.py  eia_refinery.py  epa_echo.py  epa_frs.py  epa_tri.py  osha_psm.py  phmsa_pipeline.py
src/ews_ingest/sources/pricing/: __init__.py  bls_cpi.py  bls_ppi.py  fred_pricing.py
src/ews_ingest/sources/sanctions/: __init__.py  consolidated_screening.py  eu_sanctions.py  ofac_sdn.py  opensanctions.py  un_security.py  world_bank_debarred.py
src/ews_ingest/sources/supply_chain/: __init__.py  imf_port_watch.py  lead_time.py  logistics_disruption.py  port_congestion.py  un_comtrade.py
src/ews_ingest/sources/transport/: __init__.py  ata_tonnage.py  baltic_dry.py  bts_air_consumer.py  bts_ftsi.py  bts_transtats.py  cass_freight.py  fmcsa_census.py  fmcsa_li_insurance.py  fmcsa_mcmis.py  fmcsa_new_entrant.py  fmcsa_safer.py  fmcsa_sms.py  ntsb_carol.py  usace_nav.py
src/ews_ingest/sources/universe/: __init__.py  census_cbp.py  epa_tri_universe.py  fmcsa_census_universe.py  naics_census.py  sec_company_tickers.py  sec_sic_codes.py  wikipedia_lists.py
src/ews_ingest/sources/weather/: __init__.py  noaa_gdacs.py  noaa_ncei_storm.py  noaa_nhc.py  nws.py
src/ews_ingest/tools/: __init__.py  gen_sources_yaml.py
tests/: conftest.py
tests/fixtures/: eia_brent.json  fmcsa_census_sample.csv  fred_credit_spread.json  gdacs_alerts.rss  gdelt_articles.json  sec_companyfacts.json  sec_submissions_ups.json  un_comtrade.json  worldbank_port_traffic.json
tests/integration/: __init__.py  test_run.py
tests/unit/: __init__.py  test_dashboard_graph.py  test_dashboard_signals.py  test_entities.py  test_hashing.py  test_landing.py  test_models.py  test_onboarding.py  test_parse_eia.py  test_parse_fmcsa_census.py  test_parse_fred.py  test_parse_gdacs.py  test_parse_gdelt.py  test_parse_port_congestion.py  test_parse_sec_company_facts.py  test_parse_sec_submissions.py  test_parse_un_comtrade.py  test_pick_sources.py  test_rate_limit.py  test_registry.py  test_ticker_suggest.py  test_yahoo_sector.py
