[project]
name = "ews-ingest"
version = "0.1.0"
description = "AI-led EWS data ingestion layer for wholesale credit risk"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "scrapling[fetchers]>=0.4.9",
    "selectolax>=0.4.10",
    "streamlit>=1.56.0",
    "tenacity>=9.1.4",
    "vaderSentiment>=3.3.2",
    "warcio>=1.8.1",
    "yfiles-graphs-for-streamlit>=1.3.0",
    "statsmodels>=0.14.1",
    "yfinance>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ews_ingest"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "A",   # flake8-builtins
    "DTZ", # flake8-datetimez
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "C90", # mccabe complexity
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "PLW", # pylint warnings
    "TRY", # tryceratops (exception handling)
    "EM",  # flake8-errmsg
    "FA",  # flake8-future-annotations
    "FBT", # flake8-boolean-trap (don't use bool as positional arg)
    "DJ",  # flake8-django
    "PLR", # pylint refactor (selected below)
]
ignore = [
    "COM812", # conflicts with formatter
    "ISC001", # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PLR2004", "T201", "PLR0913", "PLR0915", "ARG001"]
"src/ews_ingest/tools/**" = ["T201"]
"src/ews_ingest/dashboard/app.py" = ["T201", "C901", "PLR2004", "PLC0415", "PLR0912", "PLR0915", "PLR0913"]
"src/ews_ingest/dashboard/signals/**" = [
    "PLR2004",
    "ANN401",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "E501",
]
"src/ews_ingest/dashboard/icons.py" = ["E501", "N802", "RUF002"]
"src/ews_ingest/dashboard/ui.py" = ["PLC0415", "PLR2004", "PLR0913", "E501"]
"src/ews_ingest/dashboard/company_store.py" = ["PLC0415", "C901", "PLR2004", "S101", "BLE001"]
"**/main.py" = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit live network (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.format]
line-ending = "lf"

[tool.ty.environment]
python-version = "3.14"
python-platform = "linux"

[tool.ty.terminal]
error-on-warning = true
output-format = "full"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.rules]
# Default: turn everything (including warnings) into hard errors so CI fails
all = "error"
